@@ -314,6 +314,21 @@ name|lookupClass
 argument_list|()
 argument_list|)
 decl_stmt|;
+DECL|field|runnerCount
+specifier|private
+specifier|final
+name|int
+name|runnerCount
+init|=
+name|Integer
+operator|.
+name|getInteger
+argument_list|(
+literal|"solr.cloud.replication.runners"
+argument_list|,
+literal|1
+argument_list|)
+decl_stmt|;
 DECL|field|httpClient
 specifier|private
 name|HttpClient
@@ -466,7 +481,7 @@ name|httpClient
 argument_list|,
 literal|100
 argument_list|,
-literal|1
+name|runnerCount
 argument_list|,
 name|updateExecutor
 argument_list|,
